--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -1,2 +1,157 @@
 /* work sans font from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap');
+
+/* shared styles */
+* {
+  box-sizing: border-box;  
+}
+
+body {
+  font-family: Work Sans;
+  margin: auto;
+  /* border: 5px solid slateblue; */
+  /* width: 1920px; */
+}
+
+.logo_txt {   /* in logo and footer */
+font-size: 45px;
+font-weight: 700;
+color: #0B0223;
+}
+
+.black_heading_txt {    /* black heading txt all over the page */
+color: #0B0223;
+font-size: 48px;
+font-weight: 700;
+}
+
+.color_heading_txt {	  /* color heading txt all over the page */
+background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%); 
+font-size: 48px;
+font-weight: 700;
+}
+
+.mini_txt {   /* Mini txt in various place */
+color: #534C64;
+font-size: 18px;
+font-weight: 400;
+}
+
+.normal_txt {   /* normal txt in various place */
+color: #534C64;
+font-size: 20px;
+font-weight: 500;
+}
+
+/* button pending */
+
+
+
+
+
+
+
+/* nav styles */
+nav {
+  background-color: #fff;
+}
+
+.nav-container {
+  /* border: 5px solid red;   */
+  max-width: 1440px;
+  margin: 0 auto;
+  min-height: 130px;  
+  display: flex;
+  align-items: center;
+  /* padding-left: 240px; */  
+  /* justify-content: space-between; */
+}
+
+.logo-container {
+  /* border: 5px solid green; */
+  display: flex;
+  align-items: center;
+  width: 50%;  
+  /* justify-content: space-between; */
+}
+
+.logo-container img {
+  /* border: 5px solid salmon; */
+  width: 86px;
+  height: 40px;
+  margin-right: 15px;
+  object-fit: cover;
+}
+
+.nav-items-container {
+  /* border: 5px solid blue; */
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;  
+}
+
+.nav-items-container a {
+  text-decoration: none;
+  font-size: 18px;  
+  font-weight: 500;
+  color: #3C354F;
+  margin-left: 70px;
+}
+
+.follow_us_btn {
+  background-color: #E7E6E9;
+  padding: 16px 25px;
+  border-radius: 8px;  
+}
+
+
+
+
+
+
+
+
+
+
+
+/* responsive media queries */
+
+/* mobile devices */
+@media screen and (max-width: 576px) {
+
+  .nav-container {
+    flex-direction: column;
+    margin-top: 50px;   
+  }
+
+  .nav-items-container {
+    flex-direction: column;    
+  }
+
+  .nav-items-container a {    
+    font-size: 10px;
+    margin:  10px auto;       
+  }
+
+}
+
+
+/* tablet or medium device */
+@media screen and (min-width: 577px) and (max-width: 960px) {
+ 
+  .nav-container {
+    flex-direction: column;
+    margin-top: 50px;    
+  }
+  
+  .nav-items-container {
+    width: 70%;    
+  }
+  
+  .nav-items-container a {    
+    font-size: 14px;
+    margin:  10px auto;       
+  }
+
+}
