--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -192,14 +192,39 @@ nav {
   display: flex;
   gap: 20px;
   /* border: 5px solid blue; */
-  min-height: 300px;
-  /* align-items: center; */
+  min-height: 300px;  
   max-width: 1440px;
   margin: auto;
 }
 
+/* play instant section styles */
+.play_instant_section {
+  display: flex;  
+  /* border: 5px solid green; */
+  max-width: 1440px;
+  margin: auto;  
+}
 
+.play_instant_txt {
+  /* border: 5px solid red; */
+  width: 50%;
+  margin: auto;  
+}
 
+.play_instant_img {
+  /* border: 5px solid blue; */
+  width: 50%;  
+}
+
+.big_img {  
+  width: 80%;
+  margin-left: 120px;  
+}
+
+.small_img {    
+  position: relative;
+  bottom: 250px; 
+}
 
 
 
@@ -309,6 +334,29 @@ nav {
     font-weight: 500;
   }
 
+  .play_instant_section {
+    flex-direction: column;
+  }
+
+  .play_instant_txt {    
+    width: 80%;    
+  }
+
+  .play_instant_img {    
+    width: 90%;
+  }
+  
+  .big_img {    
+    width: 80%;
+    margin-left: 70px;    
+  }
+  
+  .small_img {      
+    width: 40%;
+    position: relative;
+    bottom: 150px; 
+  }
+
 }
 
 
@@ -345,10 +393,8 @@ nav {
     
   }
 
-  .goat_txt_content ul { 
-    /* list-style-type: none; */
-    padding: 0;
-    /* margin: 0; */
+  .goat_txt_content ul {     
+    padding: 0;    
   }
 
   .goat_title {    
@@ -414,6 +460,29 @@ nav {
   .mini_txt {  
     font-size: 12px;
     font-weight: 500;
+  }
+
+  .play_instant_section {
+    flex-direction: column;
+  }
+
+  .play_instant_txt {    
+    width: 80%;    
+  }
+
+  .play_instant_img {    
+    width: 90%;
+  }
+  
+  .big_img {    
+    width: 80%;
+    margin-left: 70px;    
+  }
+  
+  .small_img {      
+    width: 40%;
+    position: relative;
+    bottom: 150px; 
   }
 
 }
